# midi-keyboard

./: Cargo.toml  Untitled.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: lib.rs  main.rs
src/constants/: mod.rs
src/service/: lamps.rs
src/utils/: mod.rs  note_name.rs
